--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,8 @@
     <script src="https://kit.fontawesome.com/f0601b0fb2.js" crossorigin="anonymous"></script>
     <script type='module' src='https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js'></script>
     <script nomodule='' src='https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js'></script>
-    <script src="range-input.js"></script>
+    <script src="https://w.soundcloud.com/player/api.js"></script>
+    <!-- <script src="range-input.js"></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
