--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href="https://fonts.cdnfonts.com/css/digital-7-mono" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>~spectrum~</title>
+    <title>spectrum</title>
     <script src="https://kit.fontawesome.com/f0601b0fb2.js" crossorigin="anonymous"></script>
     <script type='module' src='https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js'></script>
     <script nomodule='' src='https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js'></script>
