--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" id="favicon" href="%PUBLIC_URL%/favicon.ico" />
     <link href="https://fonts.cdnfonts.com/css/digital-7-mono" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>spectrum</title>
